--- a/pages/what_is_pathway/s_version/service_missionaries.html
+++ b/pages/what_is_pathway/s_version/service_missionaries.html
@@ -73,7 +73,7 @@
       <ul class="nav navbar-nav">
         <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
         <li class="nav-2 nav_active"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-        <li class="nav-3 "><a href="#join">Join Pathway</a></li>
+        <li class="nav-3 "><a href="/working-build/pages/join-pathway.html">Join Pathway</a></li>
         <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
         <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
