--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -143,12 +143,11 @@
 
         <h3 id="AfterPathway" class="p-heading red">After Pathway</h3>
         <p>At the end of Pathway, students will have gained the confidence and skills needed to navigate their personal path and reach their goals. Students will have a variety of opportunities available to them, including:</p>
-        <ul>
-          <li>improved job prospects</li>
-          <li>a local educational option</li>
-          <li>a degree from BYU-Idaho</li>
-        </ul>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/BusinessPeople.png"><strong>improved job prospects</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/University.png"><strong>a local educational option</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/OnlineClasses.png"><strong>a degree from BYU-Idaho</strong></div>
       </div>
+      <p><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html" class="next red">Service Missionaries >></a></p>
     </div>
     <!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
