--- a/pages/what_is_pathway/l_version/HPW.html
+++ b/pages/what_is_pathway/l_version/HPW.html
@@ -144,9 +144,9 @@
 
         <h3 id="AfterPathway" class="p-heading turquoise">After Pathway</h3>
         <p>At the end of Pathway, students will have gained the confidence and skills needed to navigate their personal path and reach their goals. Students will have a variety of opportunities available to them, including:</p>
-        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/BusinessPeople.png"><strong>improved job prospects</strong></div>
-        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/University.png"><strong>a local educational option</strong></div>
-        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/OnlineClasses.png"><strong>a degree from BYU-Idaho</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/BusinessPeople.png"><strong>Improved job prospects</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/University.png"><strong>A local educational option</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/OnlineClasses.png"><strong>A degree from BYU-Idaho</strong></div>
       	</div>
 		<p><a href="/working-build/pages/what_is_pathway/l_version/speaking_partners.html" class="next turquoise">Speaking Partners >></a></p>
 		</div>
@@ -161,9 +161,9 @@
 		<ul class="nav turquoise pf-sidenav">
 			<li class="active" ><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
