--- a/pages/what_is_pathway/l_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/l_version/cost_calc_tuition.html
@@ -149,9 +149,9 @@
 		<ul class="nav turquoise pf-sidenav">
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
