--- a/pages/what_is_pathway/l_version/course_descriptions.html
+++ b/pages/what_is_pathway/l_version/course_descriptions.html
@@ -118,7 +118,7 @@
         <div class="pf-page-header"> <img src="/working-build/img/wip/icons/books.png" width="45" height="46" alt="gear">
           <h2 id="HowPathwayWorks" class="subheading">Course Descriptions</h2>
         </div>
-        <p>Pathway's academic courses are offered through BYU-Idaho. Religion classes are offered through local institute programs or online through BYU-Idaho, depending on a student's age.</p>
+        <p>Pathway's academic courses are offered online through BYU-Idaho. Religion classes are offered through local institute programs or online through BYU-Idaho, depending on a student's age.</p>
         <h4 class="c-heading turquoise accordion-1">BYU-Idaho Academic Courses <span>(for all students)</span></h4>
         <div class="accordion c-section">
         <h5 class="c-heading2 turquoise">GS 120L LIFE SKILLS AND ENGLISH</h5>
@@ -134,11 +134,11 @@
         <p>MATH 100L is designed to help students recap, learn, and retain the fundamentals of basic mathematics and algebra. Students will gain competency in entry-level college math skills; use Excel spreadsheet software to perform mathematical and financial computations; apply math skills to financial decisions such as loan payments, savings, and budgeting; and discuss provident living topics (e.g., self-reliance, stewardship, and personal finance). English language development is also emphasized as math and everyday vocabulary, as well as mechanics and grammar, are applied in speaking, listening, reading, and writing.
         </p>
         </div>
-        <h4 class="c-heading turquoise accordion-2">Institude Courses <span>(for Age 18-30 students)</span></h4>
+        <h4 class="c-heading turquoise accordion-2">Institute Courses <span>(for Age 18-30 students)</span></h4>
         <div class="accordion c-section">
         <h5 class="c-heading2 turquoise">INSTITUTE Courses</h5>
         <h6 class="c-heading3 turquoise">2 CREDITS</h6>
-        <p>The institute courses 18–30-year-old students take vary at each institute location. Students should contact their local institute to find out which courses are offered.
+        <p>The institute courses 18–30-year-old students take vary at each institute location. Students should contact their <a target="_blank" href="http://institute.lds.org/find-institute">local institute</a> to find out which courses are offered.
         </p>
         </div>
       </div>
@@ -154,9 +154,9 @@
 		<ul class="nav turquoise pf-sidenav">
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
