--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -143,9 +143,9 @@
 
         <h3 id="AfterPathway" class="p-heading red">After Pathway</h3>
         <p>At the end of Pathway, students will have gained the confidence and skills needed to navigate their personal path and reach their goals. Students will have a variety of opportunities available to them, including:</p>
-        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/BusinessPeople.png"><strong>improved job prospects</strong></div>
-        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/University.png"><strong>a local educational option</strong></div>
-        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/OnlineClasses.png"><strong>a degree from BYU-Idaho</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/BusinessPeople.png"><strong>Improved job prospects</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/University.png"><strong>A local educational option</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/OnlineClasses.png"><strong>A degree from BYU-Idaho</strong></div>
       </div>
       <p><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html" class="next red">Service Missionaries >></a></p>
     </div>
@@ -158,10 +158,9 @@
 		<ul class="nav red pf-sidenav">
 			<li  class="active"  ><a href="/working-build/pages/what_is_pathway/s_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
-					<li><a href="#AgeGroups">Age Groups</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
