--- a/pages/what_is_pathway/s_version/course_descriptions.html
+++ b/pages/what_is_pathway/s_version/course_descriptions.html
@@ -117,7 +117,7 @@
         <div class="pf-page-header"> <img src="/working-build/img/wip/icons/books.png" width="45" height="46" alt="gear">
           <h2 id="HowPathwayWorks" class="subheading">Course Descriptions</h2>
         </div>
-        <p>Pathway's academic courses are offered through BYU-Idaho. Religion classes are offered through local institute programs or online through BYU-Idaho, depending on a student's age.</p>
+        <p>Pathway's academic courses are offered online through BYU-Idaho. Religion classes are offered through local institute programs or online through BYU-Idaho, depending on a student's age.</p>
         <h4 class="c-heading red accordion-1">BYU-Idaho Academic Courses <span>(for all students)</span></h4>
         <div class="accordion c-section">
         <h5 class="c-heading2 red">GS 120 LIFE SKILLS</h5>
@@ -165,11 +165,11 @@
         <p>This course centers on “The Family: A Proclamation to the World” and develops gospel doctrines and principles pertaining to a successful and happy marriage and family life. Practical skills required to achieve and sustain provident living will also be explored and practiced.
         </p>
         </div>
-        <h4 class="c-heading red accordion-2">Institude Courses <span>(for Age 18-30 students)</span></h4>
+        <h4 class="c-heading red accordion-2">Institute Courses <span>(for Age 18-30 students)</span></h4>
         <div class="accordion c-section">
         <h5 class="c-heading2 red">INSTITUTE Courses</h5>
         <h6 class="c-heading3 red">2 CREDITS</h6>
-        <p>The institute courses 18–30-year-old students take vary at each institute location. Students should contact their local institute to find out which courses are offered.
+        <p>The institute courses 18–30-year-old students take vary at each institute location. Students should contact their <a target="_blank" href="http://institute.lds.org/find-institute">local institute</a> to find out which courses are offered.
         </p>
         </div>
       </div>
@@ -183,10 +183,9 @@
 		<ul class="nav red pf-sidenav">
 			<li  ><a href="/working-build/pages/what_is_pathway/s_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
-					<li><a href="#AgeGroups">Age Groups</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
