--- a/pages/join-pathway.html
+++ b/pages/join-pathway.html
@@ -190,7 +190,7 @@
 					<li><a href="#ApplyToPathway">Apply to Pathway</a></li>
 				</ul>
 			</li>
-			<li><a href="#LocationFinderMap"><span class="caret"></span>Find a Location</a></li>
+			<li><a href="Finder/World"><span class="caret"></span>Find a Location</a></li>
 		</ul>
 	</div>
 </div>
