--- a/pages/what_is_pathway/l_version/degree.html
+++ b/pages/what_is_pathway/l_version/degree.html
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -157,14 +157,14 @@
 		<ul class="nav turquoise pf-sidenav">
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/speaking_partners.html"><span class="caret"></span>Speaking Partners</a></li>
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
-			<li  ><a href="/working-build/pages/what_is_pathway/l_version/admission.html"><span class="caret"></span>Admission Requirements</a></li>
+			<li  ><a href="/working-build/pages/join-pathway.html"><span class="caret"></span>Admission Requirements</a></li>
 			<li  ><a href="/working-build/pages/what_is_pathway/l_version/cost.html"><span class="caret down"></span>Cost</a>
 				<ul class="nav">
 					<li><a href="/working-build/pages/what_is_pathway/l_version/cost_calc_tuition.html">Calculate Tuition</a></li>
