--- a/pages/join-pathway.html
+++ b/pages/join-pathway.html
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -111,21 +111,22 @@
         <h1 id="Standard" class="page-title">Join Pathway</h1>
         <div class="icon-header"><img class="icon" src="/working-build/img/join-pathway/JoinPathway_NoFee.png"><span class="narrow-bold">No</span> application fee</div>
         <div class="icon-header"><img class="icon" src="/working-build/img/join-pathway/JoinPathway_NoApplication.png"><span class="narrow-bold">No</span> standardized scores (ACT/SAT)</div>
-        <div class="icon-header"><img class="icon" src="/working-build/img/join-pathway/JoinPathway_NoEE.png"><span class="narrow-bold">No</span> ecclesiastical endorsement<sup>+</sup></div>
+        <div class="icon-header"><img class="icon" src="/working-build/img/join-pathway/JoinPathway_NoEE.png"><span class="narrow-bold">No</span> ecclesiastical endorsement<a href="#footnote1"><sup>+</sup></a></div>
 
         <div class="section-header" id="AdmissionRequirements"><img class="check" src="/working-build/img/join-pathway/JoinPathway_AdmissionRequirements.png">Admission Requirements</div>
 
         <ul class="admissions-req">
           <li>Be a member of The Church of Jesus Christ of Latter-day Saints</li>
+          <li>Be a) at least 17 years old with a high school diploma or equivalent or, b) age 19+ (with or without a high school diploma or equivalent)</li>
           <li>Attend weekly gatherings during Pathway (one full year)</li>
           <li>Strive to live by the BYU-Idaho Honor Code</li>
           <li>Complete an English proficiency assessment (for non-native English speakers)</li>
-          <li>Be capable of entry-level college academic work with post-secondary disability accommodations, if qualified and required</li>
+          <li>Be capable of entry-level college academic work with post-secondary <a target="_blank" href="http://www.byui.edu/disabilities/pathway-and-disabilities">disability accommodations</a>, if qualified and required</li>
           <li>Be able to access a computer with high-speed Internet and webcam/video chat capabilities on a daily basis</li>
-          <li>Live within a reasonable commuting distance of a Pathway site</li>
+          <li>Live within a reasonable commuting distance of a <a href="Finder/World">Pathway site</a></li>
         </ul>
 
-        <div class="section-header" id="AdmissionRequirements"><img class="page" src="/working-build/img/join-pathway/JoinPathway_ApplyToPathway.png">Apply to Pathway</div>
+        <div class="section-header" id="ApplyToPathway"><img class="page" src="/working-build/img/join-pathway/JoinPathway_ApplyToPathway.png">Apply to Pathway</div>
 
         <div class="apply-sect">
           <p>Applying to Pathway is simple. Follow these steps to start your journey today.</p>
@@ -135,21 +136,21 @@
             <h4 class="accordion-1 dropdown-header">I Have an LDS Account</h4>
             <div class="accordion dropdown">
               <p>Great! Let’s make sure your Membership Record Number (MRN) is connected to your LDS Account.</p>
-              <p>Log in at ldsaccount.lds.org, and select the “Membership” tab on the left.</p>
+              <p>Log in at <a target="_blank" href="https://ldsaccount.lds.org/">ldsaccount.lds.org</a>, and select the “Membership” tab on the left.</p>
               <p>If your MRN appears — you may proceed to #2 below.</p>
               <p>If your MRN does not appear, enter it on the screen. Your MRN can be found on your temple recommend, individual ordinance summary, or through a ward clerk or other Church leaders.</p>
-              <sub><em>(Note: You may submit an application to Pathway without your MRN. However, your application will not be processed until you return to ldsaccount.lds.org and enter your MRN.)</em></sub>
+              <sub><em>(Note: You may submit an application to Pathway without your MRN. However, your application will not be processed until you return to <a target="_blank" href="https://ldsaccount.lds.org/">ldsaccount.lds.org</a> and enter your MRN.)</em></sub>
             </div>
             <div class="h-rule"></div>
             <h4 class="accordion-2 dropdown-header">I Do Not Have an LDS Account</h4>
             <div class="accordion dropdown">
-              <p>No problem, you can easily create one. Go to ldsaccount.lds.org, and select “Register for an LDS Account.”</p>
+              <p>No problem, you can easily create one. Go to <a target="_blank" href="https://ldsaccount.lds.org/">ldsaccount.lds.org</a>, and select “Register for an LDS Account.”</p>
               <p>As part of the registration process, you will be asked for your Membership Record Number (MRN). Your MRN can be found on your temple recommend, individual ordinance summary, or through a ward clerk or other Church leaders.</p> 
-              <sub><em>(Note: You may submit an application to Pathway without your MRN. However, your application will not be processed until you return to ldsaccount.lds.org and enter your MRN.)</em></sub></div>
+              <sub><em>(Note: You may submit an application to Pathway without your MRN. However, your application will not be processed until you return to <a target="_blank" href="https://ldsaccount.lds.org/">ldsaccount.lds.org</a> and enter your MRN.)</em></sub></div>
               <div class="h-rule"></div>
               <h4 class="accordion-3 dropdown-header">I Might Have an LDS Account &mdash; I'm Not Sure</h4>
               <div class="accordion dropdown">
-                <p>OK, we can help. Go to ldsaccount.lds.org, and select “I have forgotten my username.” Choose an option provided. If you have an active LDS Account, the system will provide you with your username.</p>
+                <p>OK, we can help. Go to <a target="_blank" href="https://ldsaccount.lds.org/">ldsaccount.lds.org</a>, and select “I have forgotten my username.” Choose an option provided. If you have an active LDS Account, the system will provide you with your username.</p>
                 <p>If you find out that you do have an LDS Account, select “I Have an LDS Account” from the options above, and follow the instructions.</p>
                 <p>If you do not have an LDS Account, select “I Do Not Have an LDS Account” from the options above, and follow the instructions.</p>
               </div>
@@ -159,7 +160,7 @@
           <div class="apply-subsection">
             <p>Pathway is available in hundreds of locations worldwide. Follow these steps to submit an application:</p>
             <ul>
-              <li>Search for a Pathway location near you.</li>
+              <li>Search for a <a href="Finder/World"><strong><em>Pathway location</em></strong></a> near you.</li>
               <li>Click the Pathway location you want to apply to.</li>
             </ul>
             <p><em>If the location is currently accepting applications, you will see a blue “Apply” button.</em></p>
@@ -174,6 +175,8 @@
             </div>
           <!-- End Widget -->
 
+          <p style="margin:30px 0;"><sub id="footnote1"><em>+ An ecclesiastical endorsement is required at the end of Pathway for those students who choose to pursue a degree through BYU-Idaho online or on campus.</em></sub></p>
+
          </div>
       </div>
     </div>
@@ -187,7 +190,7 @@
 					<li><a href="#ApplyToPathway">Apply to Pathway</a></li>
 				</ul>
 			</li>
-			<li><a href="#LocationFinderMap"><span class="caret"></span>Find a Location</a></li>
+			<li><a href="Finder/World"><span class="caret"></span>Find a Location</a></li>
 		</ul>
 	</div>
 </div>
