--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -119,34 +119,35 @@
         <div class="pf-page-header"> <img src="/working-build/img/wip/icons/gear.png" width="45" height="46" alt="gear">
           <h2 id="HowPathwayWorks" class="subheading">How Pathway Works</h2>
         </div>
-        <h3 id="OnlineAcademicCourses" class="p-heading red">Online Academic Courses</h3>
-        <p>During each of the three semesters, students take one online academic class from BYU-Idaho as well as one religion class. The three academic classes are designed to give students the confidence and skills needed to succeed in college and include Pathway Life Skills (GS 120), Basic Writing (ENG 106), and Personal Finance (Math 100G). </p>
+        <p>Pathway is a <strong class="red">low-cost</strong> educational opportunity that mixes the flexibility of <strong class="red">online courses</strong> with the benefits of <strong class="red">local student-to-student interaction</strong>. Students earn college credit that is eligible for transfer to BYU-Idaho and other universities. The program takes one year (or three semesters) to complete and can lead to professional certificates and degrees.</p>
+
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/BYU-I-3-Semester-System.png" alt="pathway semester system" width="100%" />
+
+        <h3 id="Courses" class="p-heading red">Courses</h3>
+        <p>Each semester during Pathway, students take a light courseload consisting of both academic and religious education. Pathway courses are designed to help students learn basic skills and gain the confidence and abilities needed to succeed in college and in life.</p>
         
-        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/pathway_course_sequence.png" alt="pathway course sequence" width="100%">
-        <h3 id="ReligionClasses" class="p-heading red">Religion Courses</h3>
-        <p>During each of the three semesters, students take one of the following religion classes:</p>
-        <ul>
-          <li> Book of Mormon, Part 1 </li>
-          <li> Book of Mormon, Part 2 </li>
-          <li> Teachings of the Living Prophets – FDREL 333 </li>
-        </ul>
-        <p>All Pathway students in the standard version take the same academic and religion courses, but the schedule and method vary by <a href="#AgeGroups">age group</a>.</p>
         <img class="center-block img-responsive img-space" src="/working-build/img/hpw/religion.png" alt="students working on a project together" width="100%">
-        <h3 id="WeeklyGathering" class="p-heading red">Weekly Gathering</h3>
-        <p>The program includes a 1-hour gathering each week at a local institute facility or church meetinghouse with other Pathway students and a service missionary couple. </p>
-        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/weeklygatheringgraphic.png" alt="weekly calendar" width="100%">
-        <p>The gathering provides social, emotional, and academic support and is held every Thursday evening during the three BYU-Idaho academic semesters. </p>
-        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/semester_schedule.png" alt="semester track" width="100%">
-        <h3 id="AgeGroups" class="p-heading red">Age Groups</h3>
-        <p>Pathway students are divided into group types: Age 18-30, Age 31+, and Age 18+. (The Age 18+ group is no longer available in the United States except for a few existing sites. Most international sites continue to approve and operate Age 18+ groups.)</p>
-        <h4 class="p-heading2 red">Academic Courses</h4>
-        <p>All groups complete their Pathway academic courses online and gather weekly at a local institute facility or church meetinghouse to discuss the lesson material, collaborate on assignments, and teach one another. </p>
-        <h4 class="p-heading2 red">Religion Courses</h4>
-        <p>Students in the Age 18-30 and Age 18+ groups complete their Book of Mormon courses through their local institute program at no charge, and the credits are then eligible for transfer to BYU-Idaho.</p>
-        <p>Students in the Age 31+ group complete their Book of Mormon courses online through BYU-Idaho.</p>
-        <p>All groups complete the FDREL 333, “Teachings of the Living Prophets,” course online through BYU-Idaho.</p>
-        <p><a href="/working-build/pages/what_is_pathway/l_version/service_missionaries.html" class="next red">Service Missionaries >> </a></p>
+
+        <p>Pathway’s academic courses are offered online through BYU-Idaho. Religion classes are offered through local institute programs or online through BYU-Idaho, depending on a student’s age.</p>
+        
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/Pathway-Courses.png" alt="pathway course sequence" width="100%" />
+
+        <h3 id="WeeklyGatherings" class="p-heading red">Weekly Gatherings</h3>
+        <p>In addition to taking academic and religion courses, Pathway students also gather every Thursday evening at a local institute or church meetinghouse. There, they meet with other classmates and Pathway missionaries where they participate in additional educational and leadership activities.</p>
+
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/Gathering-Schedule.png" alt="pathway gathering schedule" width="100%" />
+
+        <p>This combination of online courses and weekly gatherings helps students develop meaningful and marketable skills — all within the framework of the gospel of Jesus Christ. It also allows students the flexibility to fit coursework around job schedules or other responsibilities, while enjoying the support of local family and friends.</p>
+
+        <img class="center-block img-responsive img-space" src="/working-build/img/hpw/weeklygatheringgraphic.png" alt="weekly gathering" width="100%">
+
+        <h3 id="AfterPathway" class="p-heading red">After Pathway</h3>
+        <p>At the end of Pathway, students will have gained the confidence and skills needed to navigate their personal path and reach their goals. Students will have a variety of opportunities available to them, including:</p>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/BusinessPeople.png"><strong>Improved job prospects</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/University.png"><strong>A local educational option</strong></div>
+        <div class="icon-bullet"><img class="icon" src="/working-build/img/hpw/OnlineClasses.png"><strong>A degree from BYU-Idaho</strong></div>
       </div>
+      <p><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html" class="next red">Service Missionaries >></a></p>
     </div>
     <!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
@@ -157,14 +158,13 @@
 		<ul class="nav red pf-sidenav">
 			<li  class="active"  ><a href="/working-build/pages/what_is_pathway/s_version/HPW.html"><span class="caret down"></span>How Pathway Works</a>
 				<ul class="nav drop-down">
-					<li><a href="#OnlineAcademicCourses">Online Academic Courses</a></li>
-					<li><a href="#ReligionClasses">Religion Courses</a></li>
-					<li><a href="#WeeklyGathering">Weekly Gathering</a></li>
-					<li><a href="#AgeGroups">Age Groups</a></li>
+					<li><a href="#Courses">Courses</a></li>
+					<li><a href="#WeeklyGatherings">Weekly Gatherings</a></li>
+					<li><a href="#AfterPathway">After Pathway</a></li>
 				</ul>
 			</li>
 			<li  ><a href="/working-build/pages/what_is_pathway/s_version/service_missionaries.html"><span class="caret"></span>Service Missionaries</a></li>
-			<li  ><a href="/working-build/pages/what_is_pathway/s_version/admission.html"><span class="caret"></span>Admission Requirements</a></li>
+			<li  ><a href="/working-build/pages/join-pathway.html"><span class="caret"></span>Admission Requirements</a></li>
 			<li  ><a href="/working-build/pages/what_is_pathway/s_version/cost.html"><span class="caret down"></span>Cost</a>
 				<ul class="nav">
 					<li><a href="/working-build/pages/what_is_pathway/s_version/cost_calc_tuition.html">Calculate Tuition</a></li>
