--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -73,7 +73,7 @@
       <ul class="nav navbar-nav">
         <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
         <li class="nav-2 nav_active"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-        <li class="nav-3 "><a href="/working-build/pages/join-pathway.html">Join Pathway</a></li>
+        <li class="nav-3 "><a href="#join">Join Pathway</a></li>
         <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
         <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
@@ -117,7 +117,7 @@
 			</div>
 			<div class="pf-section">
 				<div class="pf-page-header">
-					<img src="img/wip/icons/piggy.png" alt="piggy">
+					<img src="/working-build/img/wip/icons/piggy.png" alt="piggy">
 					<h2 id="Cost" class="subheading">Cost</h2>
 				</div>
 				<div class="main-content">
@@ -130,7 +130,7 @@
 					<br>			
 					<br>
 					<br>
-					<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase annually.</p>
+					<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase periodically.</p>
 					<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 					<h3 id="FinancialAid" class="p-heading turquoise">Financial Aid</h3>
 					<p>Financial aid is not available for Pathway students. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
