--- a/pages/advising-and-support.html
+++ b/pages/advising-and-support.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - advising_and_support</title>
+	<title>Pathway - Advising and Support</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -73,7 +73,7 @@
       <ul class="nav navbar-nav">
         <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
         <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-        <li class="nav-3 "><a href="/working-build/pages/join-pathway.html">Join Pathway</a></li>
+        <li class="nav-3 "><a href="#join">Join Pathway</a></li>
         <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
         <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
@@ -91,7 +91,7 @@
         <div id="breadCrumb" class="breadCrumb module">
             <ul>
                 <li class="first"><a href="/working-build/">Home</a></li>
-                <li  class="last" >advising and support</li>
+                <li  class="last" >Advising and Support</li>
                 
                 <li class="last"></li> 
             </ul>
@@ -104,7 +104,7 @@
 <!-- Start to the content area -->
 <div id="main-container" class="container">
   <div class="row row-offcanvas row-offcanvas-right">
-    <div class="col-xs-12 col-sm-8 main-content">
+    <div class="col-xs-12 main-content">
     <button type="button" onclick="open_side();" class="navbar-toggle sidebar-btn collapsed">
         <img id="arrow-icon" src="/working-build/img/arrow.png" width="14" height="14" alt="arrow">
     </button>
@@ -173,13 +173,6 @@
         </div>
       </div>
     </div>
-    <!-- Sidebar Start -->
-<div class="col-xs-6 col-sm-4 sidebar-offcanvas pull-right" id="sidebar" role="navigation">
-  <div class="pf-sidebar header NoAffix footnote" id="sideNav" role="complementary">
-   <a class="live_chat_icon" target="_blank" href="https://server.iad.liveperson.net/hc/1132447/?cmd=file&file=visitorWantsToChat&site=1132447&byhref=1&SESSIONVAR!skill=Pathway"> <img alt="live chat" src="/working-build/img/live_chat_icon.png"></a>
-  </div>
-</div>
-<!-- End Sidebar -->
 </div>
 </div>
 
