--- a/pages/what_is_pathway/s_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/s_version/cost_calc_tuition.html
@@ -145,7 +145,7 @@
 
                 <!-- tuition widget goes here -->
 <table id="PathwayTuition" style="width: 100%;">
-    <caption>Pathway Tuition in U.S. Dollars</caption>
+    <caption>Pathway Tuition in U.S. Dollars*</caption>
     <tbody><tr>
         <th>Country</th>
         <th>Per Credit</th>
@@ -427,7 +427,7 @@
             <td>$4,200</td>
         </tr>
 </tbody></table>
-<p>*Not inclusive of VAT, where applicable</p>
+<p><em>*Not inclusive of VAT, where applicable</em></p>
 <p>Tuition Formula:</p>
 <p class="formula"><span class="part1">Local per credit tuition amount</span> * <span class="part2">number of online credits per semester</span> = <span class="part3">total cost per semester</span></p>
 
