--- a/pages/what_is_pathway/s_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/s_version/cost_calc_tuition.html
@@ -427,7 +427,7 @@
             <td>$4,200</td>
         </tr>
 </tbody></table>
-<p><em>*Not inclusive of VAT, where applicable</em></p>
+<p><em>*Does not include of VAT, where applicable</em></p>
 <p>Tuition Formula:</p>
 <p class="formula"><span class="part1">Local per credit tuition amount</span> * <span class="part2">number of online credits per semester</span> = <span class="part3">total cost per semester</span></p>
 
