--- a/pages/join-pathway.html
+++ b/pages/join-pathway.html
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -73,7 +73,7 @@
       <ul class="nav navbar-nav">
         <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
         <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-        <li class="nav-3 nav_active"><a href="/working-build/pages/join-pathway.html">Join Pathway</a></li>
+        <li class="nav-3 nav_active"><a href="#join">Join Pathway</a></li>
         <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
         <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
@@ -120,7 +120,7 @@
           <li>Be a) at least 17 years old with a high school diploma or equivalent or, b) age 19+ (with or without a high school diploma or equivalent)</li>
           <li>Attend weekly gatherings during Pathway (one full year)</li>
           <li>Strive to live by the BYU-Idaho Honor Code</li>
-          <li>Complete an English proficiency assessment (for non-native English speakers)</li>
+          <li>Complete an English proficiency assessment (for non-native English speakers). (Before applying, individuals who are not proficient in English are encouraged to assess their English abilities by clicking <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3">here</a>.)</li>
           <li>Be capable of entry-level college academic work with post-secondary <a target="_blank" href="http://www.byui.edu/disabilities/pathway-and-disabilities">disability accommodations</a>, if qualified and required</li>
           <li>Be able to access a computer with high-speed Internet and webcam/video chat capabilities on a daily basis</li>
           <li>Live within a reasonable commuting distance of a <a href="Finder/World">Pathway site</a></li>
@@ -163,7 +163,7 @@
               <li>Search for a <a href="Finder/World"><strong><em>Pathway location</em></strong></a> near you.</li>
               <li>Click the Pathway location you want to apply to.</li>
             </ul>
-            <p><em>If the location is currently accepting applications, you will see a blue “Apply” button.</em></p>
+            <p><em>If the location is currently accepting applications, you will see a blue “Apply” button. (Before applying, individuals who are not proficient in English are encouraged to assess their English abilities by clicking <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3">here</a>.)</em></p>
             <p><em>If the location is not accepting applications, contact the Pathway missionaries listed on the page to find out the next available start date.</em></p>
           </div>
           </div>
