--- a/pages/pathway-faq.html
+++ b/pages/pathway-faq.html
@@ -38,7 +38,7 @@
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
       <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
-      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/contact-us/have-a-question.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
+      <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
@@ -73,7 +73,7 @@
       <ul class="nav navbar-nav">
         <li class="nav-1 "><a href="/working-build/pages/testimonials/testimonials.html">Testimonials</a></li>
         <li class="nav-2 "><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
-        <li class="nav-3 "><a href="/working-build/pages/join-pathway.html">Join Pathway</a></li>
+        <li class="nav-3 "><a href="#join">Join Pathway</a></li>
         <li class="nav-4 "><a href="/working-build/pages/speaking_partners/what-is-speaking-partners.html">Speaking Partners</a></li>
         <li class="nav-5 "><a href="/working-build/pages/local_leaders/using-pathway.html">Local Leaders</a></li>
       </ul>
@@ -137,6 +137,12 @@
 
          <h3 class="p-heading red"><a onClick="expand('need_endorsement')"  >Do I need an ecclesiastical endorsement to participate in Pathway?</a></h3>
          <p class="collapsible" id="need_endorsement">No, Pathway students do not need an ecclesiastical endorsement to participate in the program; however, if you continue your education at BYU-Idaho after Pathway, either on campus or as an online student, you will need to obtain an endorsement at that time.</p>
+
+
+         <h3 class="p-heading red"><a onClick="expand('required_toefl')"  >Am I required to take the TOEFL for Pathway admittance if English is not my native language?</a></h3>
+         <p class="collapsible" id="required_toefl">The TOEFL (Test of English as a Foreign Language) is a standardized test for non-native English speakers who wish to enroll in U.S. universities.<br><br>Individuals are not required to take the TOEFL to be admitted to Pathway. Students who complete Pathway and wish to join BYU-Idaho’s Online Degree Program are also not required to take the TOEFL.<br><br>However, students who are non-native English speakers and wish to attend BYU-Idaho on campus are required to take the TOEFL for university admittance. The on-campus English requirements for BYU-Idaho can be found <a target="_blank" href="http://www.byui.edu/admissions/what-type-of-applicant-am-i/international-students/english-requirements">here</a>. Non-native English-speaking students who wish to attend a local college or university after completing Pathway should verify with the individuals schools to see if the TOEFL is required for admittance.</p>
+
+
          <h3 class="p-heading red"><a onClick="expand('can_i_take')"  >Can I take more than the required 5 credits per semester?</a></h3>
          <p class="collapsible" id="can_i_take">No, Pathway students are unable to access other BYU-Idaho online courses; however, students who matriculate to the BYU-Idaho Online Degree Program at the conclusion of Pathway have the ability to take a full course load. </p>
          <h3 class="p-heading red"><a onClick="expand('can_i_miss')"  >Can I miss a gathering?</a></h3>
